Dev: mostly working like butter now to the encryption part
