# docs/swagger.yml
@@ -2979,6 +2979,271 @@ paths:
       security:
         - auth:
             - delete.oauths
+  /chats:
+    get:
+      tags:
+        - Chat
+      summary: list Chats
+      description: Retrieve a list of Chats
+      operationId: list-chats-get
+      parameters:
+        - name: search
+          in: query
+          description: Search query string
+          required: false
+          schema:
+            type: string
+            example: ""
+        - name: order_by
+          in: query
+          description: Field to order by
+          required: false
+          schema:
+            type: string
+            example: created_at
+        - name: order
+          in: query
+          description: Order direction
+          required: false
+          schema:
+            type: string
+            enum:
+              - DESC
+              - ASC
+            example: DESC
+        - name: page
+          in: query
+          description: Page number
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: per_page
+          in: query
+          description: Number of results per page
+          required: false
+          schema:
+            type: integer
+            default: 10
+        - name: trash
+          in: query
+          description: Include trashed items
+          required: false
+          schema:
+            type: boolean
+            default: false
+        - name: where_clause
+          in: query
+          description: Additional filtering criteria
+          required: false
+          schema:
+            type: object
+            example: {}
+        - name: select
+          in: query
+          description: Specific fields to select
+          required: false
+          schema:
+            type: string
+            example: ""
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entities retrieved successfully
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Chat"
+                  info:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        example: 100
+                      page:
+                        type: integer
+                        example: 1
+                      per_page:
+                        type: integer
+                        example: 10
+                      trash:
+                        type: boolean
+                        example: false
+                      order_by:
+                        type: string
+                        example: created_at
+                      order:
+                        type: string
+                        example: DESC
+                      search:
+                        type: string
+                        example: ""
+                      where_clause:
+                        type: object
+                        example: {}
+                      select:
+                        type: string
+                        example: ""
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - list.chats
+  /chats/create:
+    post:
+      tags:
+        - Chat
+      summary: create a new Chat
+      description: create a new Chat
+      operationId: create-chats-post
+      requestBody:
+        description: create a new Chat
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Chat"
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity created successfully
+                  data:
+                    $ref: "#/components/schemas/Chat"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - create.chats
+  /chats/view/{id}:
+    get:
+      tags:
+        - Chat
+      summary: view details of an existing Chat
+      description: Retrieve details of an existing Chat by ID
+      operationId: view-chats-get
+      parameters:
+        - name: id
+          in: path
+          description: ID of the Chat
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity retrieved successfully
+                  data:
+                    $ref: "#/components/schemas/Chat"
+        "400":
+          description: Invalid input
+        "404":
+          description: Entity not found
+      security:
+        - auth:
+            - view.chats
+  /chats/update/{id}:
+    put:
+      tags:
+        - Chat
+      summary: update an existing Chat
+      description: update an existing Chat
+      operationId: update-chats-put
+      parameters:
+        - name: id
+          in: path
+          description: id of the Chat
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        description: update an existing Chat. Every key is optional here.
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Chat"
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity created successfully
+                  data:
+                    $ref: "#/components/schemas/Chat"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - update.chats
+  /chats/delete/{id}:
+    delete:
+      tags:
+        - Chat
+      summary: delete an existing Chat
+      description: delete an existing Chat
+      operationId: delete-chats-delete
+      parameters:
+        - name: id
+          in: path
+          description: id of the Chat
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Entity deleted successfully
+                  data:
+                    $ref: "#/components/schemas/Chat"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+      security:
+        - auth:
+            - delete.chats
 components:
   schemas:
     Book:
@@ -3192,6 +3457,22 @@ components:
       type: object
       required:
         - title
+    Chat:
+      properties:
+        message:
+          minLength: 3
+          type: string
+        room_id:
+          minLength: 3
+          type: string
+        unread:
+          minLength: 3
+          type: boolean
+      type: object
+      required:
+        - message
+        - room_id
+        - unread
   securitySchemes:
     petstore_auth:
       type: oauth2
